--- a/package.json
+++ b/package.json
@@ -30,6 +30,6 @@
   },
   "devDependencies": {
     "eslint": "8.32.0",
-    "eslint-config-next": "13.1.4"
+    "eslint-config-next": "^12.0.4"
   }
 }
