--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "serve": "sirv out --port 8080 --cors"
+    "lint": "next lint"
   },
   "dependencies": {
     "@faker-js/faker": "^7.6.0",
