--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "@faker-js/faker": "^7.6.0",
     "@reduxjs/toolkit": "^1.8.6",
     "axios": "^1.6.3",
-    "bootstrap": "^5.2.1",
+    "bootstrap": "^5.3.2",
     "chart.js": "^4.0.1",
     "next": "^12.3.4",
     "photoswipe": "^5.3.7",
     "react": "18.2.0",
+    "react-bootstrap": "^2.9.2",
     "react-chartjs-2": "^5.0.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
