--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "chart.js": "^4.0.1",
     "next": "^12.3.4",
     "photoswipe": "^5.3.7",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
     "react-chartjs-2": "^5.0.1",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-photoswipe-gallery": "^2.2.1",
     "react-pro-sidebar": "^0.7.1",
